# OOR

./: README.md
Presentation/: .~lock.abpart.odp#  .~lock.final.pptx#  .~lock.presentation.odp#  abpart.odp  final.odp  presentation.odp  presentation_quim.odp  waldek.odp
Report/: Lobos_solitarios_Report.aux  Lobos_solitarios_Report.tex  Lobos_solitarios_Report.toc  Lobos_solitarios_Report_final draft.aux  Lobos_solitarios_Report_final draft.tex  Lobos_solitarios_Report_final draft.toc  Waldek_part.tex
Report/images/: diagocto.xcf  plan1.xcf
SourceCode/ROS/: createLinks.sh
SourceCode/ROS/ab_oct/: CMakeLists.txt  CMakeLists.txt~  conf_octo.rviz  package.xml  package.xml~
SourceCode/ROS/ab_pclou2topcl/: CMakeLists.txt~  (+2 more)
SourceCode/kin_viewer/: CMakeLists.txt
SourceCode/matchingProcess/: .ycm_extra_conf.py  CMakeLists.txt
SourceCode/matchingProcess/src/: MyGraph.hpp  graph.c  graph.h  mainTest.cpp
SourceCode/planeExtraction_dev/: CMakeLists.txt  main.cpp  rangeImage_utils.cpp  rangeImage_utils.hpp
SourceCode/prmtvProcess/: #prmtvProcess.hpp#  CMakeLists.txt  CMakeLists.txt~  plane_pointcloud.pcd  prmtvProcess.cpp  prmtvProcess.cpp~  prmtvProcess.hpp  prmtvProcess.hpp~  prmtvProcess.h~
SourceCode/visualize_pcd/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pcl_visualizer_demo  pcl_visualizer_demo.cpp
snapshots/octomapsnapshots/: coto_lounge_table.pcd  octo_lounge_bin.pcd  octo_lounge_bin2.pcd  octo_lounge_binbetter.pcd  octo_lounge_rable.pcd  octo_lounge_sofa.pcd  pcl_visualizer_demo  testmap3.pcd  testmapchar.pcd  testvarios.pcd
(+56 files in other folders)
